[gd_scene load_steps=4 format=3 uid="uid://cdllvo3kt6irs"]

[ext_resource type="Script" path="res://win_4.gd" id="1_ad7kr"]
[ext_resource type="Texture2D" uid="uid://c1j3ue0r8dex5" path="res://texturess/zepelin_win.jpg" id="2_lfsyw"]
[ext_resource type="AudioStream" uid="uid://bx6letn4sei04" path="res://son/feu_zepelin.mp3" id="2_nr00u"]

[node name="win_4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ad7kr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 400)
scale = Vector2(1.25, 1.02696)
texture = ExtResource("2_lfsyw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -131.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Victoire ?"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_previous = NodePath("../Button3")
text = "Recommencer ?"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../Button2")
text = "Retour au menu"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../Button2")
text = "Credits"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nr00u")
volume_db = -3.0

[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
